fix spacings on service's section

--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ footer, .trusted {
   border-radius: 12px;
 }
 
-.services__container, footer, .contact, .testimonials__container, .faq__container, .hiw__container, .hero {
+footer, .contact, .testimonials__container, .faq__container, .hiw__container, .hero {
   margin: 6rem 0;
 }
 
@@ -623,14 +623,20 @@ footer h4 {
 
 .services__container {
   padding: 2rem;
+  margin-top: 4rem;
   max-width: 1250px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
 .services__container .services__text {
+  margin: 6rem 0;
   text-align: center;
   margin-bottom: 2rem;
+}
+.services__container .services__text p {
+  font-size: 1.8rem;
+  font-weight: bold;
 }
 .services__container .services__navbar {
   width: 100%;
@@ -702,13 +708,14 @@ footer h4 {
 .services__container .services__content .services__left .services__item .content p {
   font-weight: 300;
   opacity: 0.8;
+  margin-bottom: 0.8rem;
 }
-.services__container .services__content .services__left .services__item .content .price {
+.services__container .services__content .services__left .services__item .content .plan {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 1.6rem;
 }
-.services__container .services__content .services__left .services__item .content .price .cta-button {
+.services__container .services__content .services__left .services__item .content .plan .cta-button {
   background-color: rgba(255, 255, 255, 0.03);
   color: #FBE9BE;
   border-radius: 0.6rem;
@@ -720,16 +727,21 @@ footer h4 {
   display: flex;
   align-items: center;
   gap: 1rem;
+  transition: 0.3s;
 }
-.services__container .services__content .services__left .services__item .content .price .cta-button:hover {
+.services__container .services__content .services__left .services__item .content .plan .cta-button:hover {
   background-color: rgba(31, 31, 31, 0.4196078431);
 }
-.services__container .services__content .services__left .services__item .content .price .cta-button:hover span {
+.services__container .services__content .services__left .services__item .content .plan .cta-button:hover span {
   margin-left: 0.6rem;
 }
-.services__container .services__content .services__left .services__item .content .price .price-text {
+.services__container .services__content .services__left .services__item .content .plan .plan-text {
   font-size: 1rem;
-  color: rgba(255, 255, 255, 0.45);
+  color: rgba(255, 255, 255, 0.85);
+}
+.services__container .services__content .services__left .services__item .content .plan .plan-text:hover {
+  cursor: pointer;
+  color: #fff;
 }
 .services__container .services__content .services__right {
   display: flex;
